--- a/package.json
+++ b/package.json
@@ -12,14 +12,22 @@
   },
   "scripts": {
     "start": "node rest_server.js",
-    "create_db": "./node_modules/.bin/sequelize db:create",
-    "drop_db": "./node_modules/.bin/sequelize db:drop",
-    "migrate_db": "./node_modules/.bin/sequelize db:migrate",
-    "seed_db": "./node_modules/.bin/sequelize db:seed:all",
-    "create_test_db": "./node_modules/.bin/cross-env NODE_ENV=test ./node_modules/.bin/sequelize db:create",
-    "drop_test_db": "node_modules/.bin/cross-env NODE_ENV=test ./node_modules/.bin/sequelize db:drop",
-    "migrate_test_db": "node_modules/.bin/cross-env NODE_ENV=test ./node_modules/.bin/sequelize db:migrate",
-    "seed_test_db": "node_modules/.bin/cross-env NODE_ENV=test ./node_modules/.bin/sequelize db:seed:all"
+    "create_db": "node node_modules/sequelize-cli/lib/sequelize db:create",
+    "create_db_linux": "./node_modules/.bin/sequelize db:create",
+    "migrate_db": "node node_modules/sequelize-cli/lib/sequelize db:migrate",
+    "migrate_db_linux": "./node_modules/.bin/sequelize db:migrate",
+    "seed_db": "node node_modules/sequelize-cli/lib/sequelize db:seed:all",
+    "seed_db_linux": "./node_modules/.bin/sequelize db:seed:all",
+    "drop_db": "node node_modules/sequelize-cli/lib/sequelize db:drop",
+    "drop_db_linux": "./node_modules/.bin/sequelize db:drop",
+    "create_test_db": "cross-env NODE_ENV=test sequelize db:create",
+    "create_test_db_linux": "./node_modules/.bin/cross-env NODE_ENV=test ./node_modules/.bin/sequelize db:create",
+    "migrate_test_db": "cross-env NODE_ENV=test sequelize db:migrate",
+    "migrate_test_db_linux": "node_modules/.bin/cross-env NODE_ENV=test ./node_modules/.bin/sequelize db:migrate",
+    "seed_test_db": "cross-env NODE_ENV=test sequelize db:seed:all",
+    "seed_test_db_linux": "node_modules/.bin/cross-env NODE_ENV=test ./node_modules/.bin/sequelize db:seed:all",
+    "drop_test_db": "cross-env NODE_ENV=test sequelize db:drop",
+    "drop_test_db_linux": "node_modules/.bin/cross-env NODE_ENV=test ./node_modules/.bin/sequelize db:drop"    
   },
   "dependencies": {
     "autocorector": "^3.1.6",
